+ Product Management window and basic methods

--- a/OLX-copy/MainWindow.xaml
+++ b/OLX-copy/MainWindow.xaml
@@ -8,12 +8,12 @@
         Title="OLX Copy" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <!-- Верхняя панель -->
         <DockPanel LastChildFill="True">
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Background="#FFEEEEEE" Height="50">
                 <Button Content="Search" Margin="10,10,0,10" Padding="10,5"/>
                 <Button Content="Account" Margin="10,10,0,10" Padding="10,5"/>
                 <Button Content="Add item" Margin="10,10,0,10" Padding="10,5"/>
+                <Button Content="Мої оголошення" Margin="10,10,0,10" Click="OpenProductManager_Click"/>
             </StackPanel>
             <Grid Background="White">
             </Grid>
