--- a/OLX-copy/Views/LoginWindow.xaml
+++ b/OLX-copy/Views/LoginWindow.xaml
@@ -1,14 +1,17 @@
 ﻿<Window x:Class="OLX_copy.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:OLX_copy.ViewModels"
         Title="LoginWindow" Height="450" Width="800">
+
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
+
+    <Window.DataContext>
+        <vm:LoginViewModel />
+    </Window.DataContext>
+
     <Grid Background="#f0f0f0">
         <Border Width="300" Padding="20" BorderBrush="Gray" BorderThickness="1" CornerRadius="10" Background="White"
                 HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -17,7 +20,7 @@
 
                 <!-- Username -->
                 <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Name="UsernameTextBox"/>
+                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Login"
                                Foreground="Gray"
                                Opacity="0.5"
@@ -25,12 +28,12 @@
                                Margin="5,2,0,0"
                                VerticalAlignment="Center"
                                IsHitTestVisible="False"
-                               Visibility="{Binding Text.IsEmpty, ElementName=UsernameTextBox, Converter={StaticResource BoolToVis}}"/>
+                               Visibility="{Binding IsUsernameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
                 <!-- Password -->
                 <Grid Margin="0 0 0 10" Height="30">
-                    <PasswordBox Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
+                    <PasswordBox x:Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
                     <TextBlock x:Name="PasswordWatermark"
                            Text="Password"
                            Foreground="Gray"
@@ -41,7 +44,8 @@
                            IsHitTestVisible="False"/>
                 </Grid>
 
-                <Button Content="Login" Width="100" Height="30" HorizontalAlignment="Center" Click="LoginButton_Click"/>
+                <Button Content="Login" Width="100" Height="30" HorizontalAlignment="Center"
+                        Command="{Binding LoginCommand}"/>
 
                 <TextBlock Text="Don't have an account?" Margin="0 20 0 0" HorizontalAlignment="Center"/>
                 <TextBlock Text="Register" Foreground="Blue" Cursor="Hand" HorizontalAlignment="Center"
