--- a/OLX-copy/Views/RegistrationWindow.xaml
+++ b/OLX-copy/Views/RegistrationWindow.xaml
@@ -1,14 +1,16 @@
 ﻿<Window x:Class="OLX_copy.RegistrationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:OLX_copy.ViewModels"
+
         Title="RegisterWindow" Height="450" Width="800">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
+
+    <Window.DataContext>
+        <vm:RegistrationViewModel />
+    </Window.DataContext>
 
     <Grid Background="#f0f0f0">
         <Border Width="300" Padding="20" BorderBrush="Gray" BorderThickness="1" CornerRadius="10" Background="White"
@@ -18,7 +20,7 @@
 
                 <!-- Username -->
                 <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Name="UsernameTextBox"/>
+                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Login"
                                Foreground="Gray"
                                Opacity="0.5"
@@ -26,12 +28,12 @@
                                Margin="5,2,0,0"
                                VerticalAlignment="Center"
                                IsHitTestVisible="False"
-                               Visibility="{Binding Text.IsEmpty, ElementName=UsernameTextBox, Converter={StaticResource BoolToVis}}"/>
+                               Visibility="{Binding IsUsernameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
                 <!-- Name -->
                 <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Name="NameTextBox"/>
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Name"
                                Foreground="Gray"
                                Opacity="0.5"
@@ -39,7 +41,7 @@
                                Margin="5,2,0,0"
                                VerticalAlignment="Center"
                                IsHitTestVisible="False"
-                               Visibility="{Binding Text.IsEmpty, ElementName=NameTextBox, Converter={StaticResource BoolToVis}}"/>
+                               Visibility="{Binding IsNameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
                 <!-- Password -->
@@ -57,7 +59,7 @@
 
                 <!-- Email -->
                 <Grid Margin="0 0 0 20" Height="30">
-                    <TextBox Name="EmailTextBox"/>
+                    <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBlock Text="Email"
                                Foreground="Gray"
                                Opacity="0.5"
@@ -65,10 +67,10 @@
                                Margin="5,2,0,0"
                                VerticalAlignment="Center"
                                IsHitTestVisible="False"
-                               Visibility="{Binding Text.IsEmpty, ElementName=EmailTextBox, Converter={StaticResource BoolToVis}}"/>
+                               Visibility="{Binding IsEmailEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
-                <Button Content="Register" Width="100" Height="30" HorizontalAlignment="Center" Click="RegistrationButton_Click"/>
+                <Button Content="Register" Width="100" Height="30" HorizontalAlignment="Center" Command="{Binding RegisterCommand}"/>
 
                 <TextBlock Text="Already have an account?" Margin="0 20 0 0" HorizontalAlignment="Center"/>
                 <TextBlock Text="Login" Foreground="Blue" Cursor="Hand" HorizontalAlignment="Center"
