--- a/OLX-copy/Views/MainWindow.xaml
+++ b/OLX-copy/Views/MainWindow.xaml
@@ -1,10 +1,8 @@
 ﻿<Window x:Class="OLX_copy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OLX_copy"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:OLX_copy.ViewModels" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         Title="OLX Copy" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
     <Grid>
@@ -13,7 +11,7 @@
                 <Button Content="Search" Margin="10,10,0,10" Padding="10,5"/>
                 <Button Content="Account" Margin="10,10,0,10" Padding="10,5"/>
                 <Button Content="Add item" Margin="10,10,0,10" Padding="10,5"/>
-                <Button Content="Мої оголошення" Margin="10,10,0,10" Click="OpenProductManager_Click"/>
+                <Button Content="Мої оголошення" Margin="10,10,0,10" Command="{Binding OpenProductManagerCommand}"/>
             </StackPanel>
             <Grid Background="White">
             </Grid>
