--- a/OLX-copy/Views/LoginWindow.xaml
+++ b/OLX-copy/Views/LoginWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OLX_copy.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:OLX_copy.ViewModels"
+        xmlns:vm="clr-namespace:OLX_copy.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         Title="LoginWindow" Height="450" Width="800">
 
     <Window.Resources>
@@ -9,44 +9,64 @@
     </Window.Resources>
 
     <Grid Background="#f0f0f0">
+        <DockPanel Background="Black" Height="50" VerticalAlignment="Top">
+            <!-- Логотип -->
+            <Image Source="images/logo_for_OLX_copy-removebg-preview.png"
+                   Width="200" Height="60" Margin="15,0"
+                   VerticalAlignment="Center" DockPanel.Dock="Left"/>
+
+        </DockPanel>
+        
         <Border Width="300" Padding="20" BorderBrush="Gray" BorderThickness="1" CornerRadius="10" Background="White"
                 HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
                 <TextBlock Text="Login" FontSize="24" FontWeight="Bold" Margin="0 0 0 20" HorizontalAlignment="Center"/>
 
                 <!-- Username -->
-                <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBlock Text="Login"
-                               Foreground="Gray"
-                               Opacity="0.5"
-                               FontStyle="Italic"
-                               Margin="5,2,0,0"
-                               VerticalAlignment="Center"
-                               IsHitTestVisible="False"
+                <Grid Margin="0,0,0,10">
+                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Height="35"
+                            Background="White" Foreground="Black" FontSize="14"/>
+                    <TextBlock x:Name="EmailWatermark" Text="Email"
+                            Foreground="Gray" FontSize="14"
+                            VerticalAlignment="Center" Margin="10,0,0,0"
+                            IsHitTestVisible="False"
                                Visibility="{Binding IsUsernameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
                 <!-- Password -->
-                <Grid Margin="0 0 0 10" Height="30">
-                    <PasswordBox x:Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
-                    <TextBlock x:Name="PasswordWatermark"
-                           Text="Password"
-                           Foreground="Gray"
-                           Opacity="0.5"
-                           FontStyle="Italic"
-                           Margin="5,2,0,0"
-                           VerticalAlignment="Center"
-                           IsHitTestVisible="False"/>
+                <Grid Margin="0,0,0,20">
+                    <PasswordBox x:Name="PasswordBox" Height="35"
+                        Background="White" Foreground="Black" FontSize="14"
+                        PasswordChanged="PasswordBox_PasswordChanged"/>
+                        <TextBlock x:Name="PasswordWatermark" Text="Password"
+                            Foreground="Gray" FontSize="14"
+                            VerticalAlignment="Center" Margin="10,0,0,0"
+                            IsHitTestVisible="False"/>
                 </Grid>
 
-                <Button Content="Login" Width="100" Height="30" HorizontalAlignment="Center"
-                        Command="{Binding LoginCommand}"/>
+                <Button Content="Authorize" Width="120" Height="35" HorizontalAlignment="Center"
+                        Background="Black" Foreground="White" FontWeight="Bold"
+                        BorderThickness="0" Command="{Binding LoginCommand}">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="15"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
 
                 <TextBlock Text="Don't have an account?" Margin="0 20 0 0" HorizontalAlignment="Center"/>
-                <TextBlock Text="Register" Foreground="Blue" Cursor="Hand" HorizontalAlignment="Center"
-                           MouseDown="RegisterTextBlock_MouseDown"/>
+                <TextBlock Text="Register" HorizontalAlignment="Center" Margin="0,15,0,0"
+                        Foreground="Black" TextDecorations="Underline" Cursor="Hand"
+                        MouseDown="RegisterTextBlock_MouseDown"/>
             </StackPanel>
         </Border>
+        
+        <DockPanel Background="Black" Height="40" VerticalAlignment="Bottom">
+            <Image Source="images\logo_for_OLX_copy-removebg-preview.png"
+                   Width="200" Height="60" Margin="15,0"
+                   VerticalAlignment="Center" DockPanel.Dock="Left"/>
+            <TextBlock Text="© 2025 OLX Copy. All Rights Reserved." Foreground="White"
+                       VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </DockPanel>
     </Grid>
 </Window>
