--- a/OLX-copy/Views/RegistrationWindow.xaml
+++ b/OLX-copy/Views/RegistrationWindow.xaml
@@ -2,76 +2,102 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:OLX_copy.ViewModels"
+        Title="RegistrationWindow" Height="700" Width="1000">
 
-        Title="RegisterWindow" Height="450" Width="800">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
 
-    <Grid Background="#f0f0f0">
-        <Border Width="300" Padding="20" BorderBrush="Gray" BorderThickness="1" CornerRadius="10" Background="White"
-            HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid>
+        <!-- Верхняя панель -->
+        <DockPanel Background="Black" Height="50" VerticalAlignment="Top">
+            <Image Source="images\logo_for_OLX_copy-removebg-preview.png"
+                   Width="200" Height="60" Margin="15,0"
+                   VerticalAlignment="Center" DockPanel.Dock="Left"/>
+        </DockPanel>
+
+        <!-- Центр формы -->
+        <Border Width="350" Padding="30" BorderBrush="Gray" BorderThickness="0" CornerRadius="15" Background="#f0f0f0"
+                HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
                 <TextBlock Text="Registration" FontSize="24" FontWeight="Bold" Margin="0 0 0 20" HorizontalAlignment="Center"/>
 
-                <!-- Username -->
-                <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBlock Text="Login"
-                               Foreground="Gray"
-                               Opacity="0.5"
-                               FontStyle="Italic"
-                               Margin="5,2,0,0"
-                               VerticalAlignment="Center"
-                               IsHitTestVisible="False"
-                               Visibility="{Binding IsUsernameEmpty, Converter={StaticResource BoolToVis}}"/>
-                </Grid>
-
                 <!-- Name -->
-                <Grid Margin="0 0 0 10" Height="30">
-                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                <Grid Margin="0 0 0 10" Height="35">
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" 
+                             FontSize="14" Background="White" BorderBrush="#CCC" BorderThickness="1"/>
                     <TextBlock Text="Name"
-                               Foreground="Gray"
-                               Opacity="0.5"
-                               FontStyle="Italic"
-                               Margin="5,2,0,0"
-                               VerticalAlignment="Center"
-                               IsHitTestVisible="False"
+                               Foreground="Gray" Opacity="0.5" FontStyle="Italic"
+                               Margin="5,2,0,0" VerticalAlignment="Center" IsHitTestVisible="False"
                                Visibility="{Binding IsNameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
-                <!-- Password -->
-                <Grid Margin="0 0 0 10" Height="30">
-                        <PasswordBox Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
-                        <TextBlock x:Name="PasswordWatermark"
-                                   Text="Password"
-                                   Foreground="Gray"
-                                   Opacity="0.5"
-                                   FontStyle="Italic"
-                                   Margin="5,2,0,0"
-                                   VerticalAlignment="Center"
-                                   IsHitTestVisible="False"/>
+                <!-- Login -->
+                <Grid Margin="0 0 0 10" Height="35">
+                    <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" 
+                             FontSize="14" Background="White" BorderBrush="#CCC" BorderThickness="1"/>
+                    <TextBlock Text="Login"
+                               Foreground="Gray" Opacity="0.5" FontStyle="Italic"
+                               Margin="5,2,0,0" VerticalAlignment="Center" IsHitTestVisible="False"
+                               Visibility="{Binding IsUsernameEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
                 <!-- Email -->
-                <Grid Margin="0 0 0 20" Height="30">
-                    <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
+                <Grid Margin="0 0 0 10" Height="35">
+                    <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" 
+                             FontSize="14" Background="White" BorderBrush="#CCC" BorderThickness="1"/>
                     <TextBlock Text="Email"
-                               Foreground="Gray"
-                               Opacity="0.5"
-                               FontStyle="Italic"
-                               Margin="5,2,0,0"
-                               VerticalAlignment="Center"
-                               IsHitTestVisible="False"
+                               Foreground="Gray" Opacity="0.5" FontStyle="Italic"
+                               Margin="5,2,0,0" VerticalAlignment="Center" IsHitTestVisible="False"
                                Visibility="{Binding IsEmailEmpty, Converter={StaticResource BoolToVis}}"/>
                 </Grid>
 
-                <Button Content="Register" Width="100" Height="30" HorizontalAlignment="Center" Command="{Binding RegisterCommand}"/>
+                <!-- Password -->
+                <Grid Margin="0 0 0 10" Height="35">
+                    <PasswordBox Name="PasswordBox" 
+                                 PasswordChanged="PasswordBox_PasswordChanged"
+                                 FontSize="14" Background="White" BorderBrush="#CCC" BorderThickness="1"/>
+                    <TextBlock x:Name="PasswordWatermark"
+                               Text="Password" Foreground="Gray" Opacity="0.5"
+                               FontStyle="Italic" Margin="10,0,0,0" VerticalAlignment="Center"
+                               IsHitTestVisible="False"/>
+                </Grid>
 
-                <TextBlock Text="Already have an account?" Margin="0 20 0 0" HorizontalAlignment="Center"/>
-                <TextBlock Text="Login" Foreground="Blue" Cursor="Hand" HorizontalAlignment="Center"
-                       MouseDown="LoginTextBlock_MouseDown"/>
+                <!-- Register Button -->
+                <Button Content="Register" Background="Black" Foreground="White"
+                        FontSize="16" Height="40" BorderThickness="0" Margin="0 10 0 0"
+                        Command="{Binding RegisterCommand}"
+                        HorizontalAlignment="Stretch">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}" 
+                                    CornerRadius="15" 
+                                    BorderBrush="{TemplateBinding BorderBrush}" 
+                                    BorderThickness="{TemplateBinding BorderThickness}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <!-- Переход на логин -->
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10 0 0">
+                    <TextBlock Text="Already have an account?" FontSize="14" VerticalAlignment="Center"/>
+                    <TextBlock Text="Login"
+                               FontSize="14" Foreground="Blue" TextDecorations="Underline"
+                               Cursor="Hand" Margin="5,0,0,0"
+                               MouseDown="LoginTextBlock_MouseDown"/>
+                </StackPanel>
             </StackPanel>
         </Border>
+
+        <!-- Нижняя панель -->
+        <DockPanel Background="Black" Height="40" VerticalAlignment="Bottom">
+            <Image Source="images\logo_for_OLX_copy-removebg-preview.png"
+                   Width="200" Height="60" Margin="15,0"
+                   VerticalAlignment="Center" DockPanel.Dock="Left"/>
+            <TextBlock Text="© 2025 OLX Copy. All Rights Reserved." Foreground="White"
+                       VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </DockPanel>
     </Grid>
 </Window>
