--- a/OLX-copy/Views/UserHomePage.xaml
+++ b/OLX-copy/Views/UserHomePage.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="OLX_copy.Views.UserHomePage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OLX_copy.Views"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:OLX_copy.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         Title="UserHomePage" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -91,7 +88,7 @@
                             </Style>
                         </StackPanel.Resources>
 
-                        <Button Content="My ads"/>
+                        <Button Content="My ads" Command="{Binding MyAdsOpenCommand}"/>
                         <Button Content="Favorites"/>
                         <Button Content="Messages"/>
                         <Button Content="Customization"/>
