--- a/OLX-copy/Views/ProductManagementWindow.xaml
+++ b/OLX-copy/Views/ProductManagementWindow.xaml
@@ -5,7 +5,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=vm:ProductManagementViewModel}"
         Title="Ad managment" Height="450" Width="800">
     <DockPanel LastChildFill="True">
 
@@ -58,6 +57,9 @@
 
                         <TextBlock Text="Название товара *" FontWeight="Bold" Margin="0,5"/>
                         <TextBox Text="{Binding NewProductName, UpdateSourceTrigger=PropertyChanged}" Height="30" Background="White" Padding="5"/>
+
+                        <TextBlock Text="Количество товара *" FontWeight="Bold" Margin="0,5"/>
+                        <TextBox Text="{Binding NewProductStock, UpdateSourceTrigger=PropertyChanged}" Height="30" Background="White" Padding="5"/>
 
                         <TextBlock Text="Категория *" FontWeight="Bold" Margin="0,10,0,5"/>
                         <ComboBox ItemsSource="{Binding ProductGroups}"
